# ibus-anthy

./: Makefile.am  configure.ac
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: main.yml
data/: era.t  ibus-anthy.appdata.xml.in
engine/: Makefile.am
engine/python2/: main.py
engine/python3/: engine.py  main.py
po/: LINGUAS  ca.po  cs.po  de.po  el.po  es.po  fa.po  fi.po  fr.po  hu.po  ibus-anthy.pot  id.po  ja.po  ka.po  kab.po  ko.po  pt_BR.po  pt_PT.po  si.po  sv.po  tr.po  uk.po  zh_CN.po
tests/: anthytest.py
